[package]
name = "territopple_vm"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/tsj845/ttvm-rs"
license-file = "UNLICENSE"
description = "Rust implementation of the Territopple Virtual Machine, very unstable"

authors = [
    "Tristan Schartman <tristan.schartman@territopple.net>"
]

exclude = [
    "src/main.rs"
]

[dependencies]
tokio = {version = "^1",features = ["rt","time"],optional = true}

[features]
debug = []
# default = ["debug"]
